change in index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <form id="sort">
                     <label for="sortProduct">select a category</label>
                     <select name="sortProduct" id="sortProduct">
-                        <option value="all">All products</option>
+                        <option value="all products">All products</option>
                         <option value="jewelery">Jewelery</option>
                         <option value="men's clothing">Men's clothing</option>
                         <option value="electronics">Electronics</option>
